ca2/testing-tac/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> classes
Rule 2     classes -> class SEMI classes
Rule 3     classes -> class SEMI
Rule 4     class -> CLASS TYPE INHERITS TYPE LBRACE features RBRACE
Rule 5     class -> CLASS TYPE LBRACE features RBRACE
Rule 6     features -> feature SEMI features
Rule 7     features -> <empty>
Rule 8     feature -> IDENTIFIER LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
Rule 9     feature -> IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
Rule 10    feature -> IDENTIFIER COLON TYPE LARROW expr
Rule 11    feature -> IDENTIFIER COLON TYPE
Rule 12    formals -> formal COMMA formals
Rule 13    formals -> formal
Rule 14    formal -> IDENTIFIER COLON TYPE
Rule 15    expr -> IDENTIFIER LARROW expr
Rule 16    expr -> expr DOT IDENTIFIER LPAREN exprs RPAREN
Rule 17    expr -> expr DOT IDENTIFIER LPAREN RPAREN
Rule 18    expr -> expr AT TYPE DOT IDENTIFIER LPAREN exprs RPAREN
Rule 19    expr -> expr AT TYPE DOT IDENTIFIER LPAREN RPAREN
Rule 20    expr -> IDENTIFIER LPAREN exprs RPAREN
Rule 21    expr -> IDENTIFIER LPAREN RPAREN
Rule 22    exprs -> expr COMMA exprs
Rule 23    exprs -> expr
Rule 24    expr -> IF expr THEN expr ELSE expr FI
Rule 25    expr -> WHILE expr LOOP expr POOL
Rule 26    expr -> LBRACE exprsemi RBRACE
Rule 27    exprsemi -> expr SEMI exprsemi
Rule 28    exprsemi -> expr SEMI
Rule 29    expr -> LET bindings IN expr
Rule 30    bindings -> IDENTIFIER COLON TYPE LARROW expr bindings_tail
Rule 31    bindings -> IDENTIFIER COLON TYPE bindings_tail
Rule 32    bindings_tail -> COMMA IDENTIFIER COLON TYPE LARROW expr bindings_tail
Rule 33    bindings_tail -> COMMA IDENTIFIER COLON TYPE bindings_tail
Rule 34    bindings_tail -> <empty>
Rule 35    expr -> CASE expr OF cases ESAC
Rule 36    cases -> IDENTIFIER COLON TYPE RARROW expr SEMI cases
Rule 37    cases -> IDENTIFIER COLON TYPE RARROW expr SEMI
Rule 38    expr -> NEW TYPE
Rule 39    expr -> ISVOID expr
Rule 40    expr -> expr PLUS expr
Rule 41    expr -> expr MINUS expr
Rule 42    expr -> expr TIMES expr
Rule 43    expr -> expr DIVIDE expr
Rule 44    expr -> expr LT expr
Rule 45    expr -> expr LE expr
Rule 46    expr -> expr EQUALS expr
Rule 47    expr -> NOT expr
Rule 48    expr -> TILDE expr
Rule 49    expr -> LPAREN expr RPAREN
Rule 50    expr -> IDENTIFIER
Rule 51    expr -> INTEGER
Rule 52    expr -> STRING
Rule 53    expr -> TRUE
Rule 54    expr -> FALSE

Terminals, with rules where they appear

AT                   : 18 19
CASE                 : 35
CLASS                : 4 5
COLON                : 8 9 10 11 14 30 31 32 33 36 37
COMMA                : 12 22 32 33
DIVIDE               : 43
DOT                  : 16 17 18 19
ELSE                 : 24
EQUALS               : 46
ESAC                 : 35
FALSE                : 54
FI                   : 24
IDENTIFIER           : 8 9 10 11 14 15 16 17 18 19 20 21 30 31 32 33 36 37 50
IF                   : 24
IN                   : 29
INHERITS             : 4
INTEGER              : 51
ISVOID               : 39
LARROW               : 10 15 30 32
LBRACE               : 4 5 8 9 26
LE                   : 45
LET                  : 29
LOOP                 : 25
LPAREN               : 8 9 16 17 18 19 20 21 49
LT                   : 44
MINUS                : 41
NEW                  : 38
NOT                  : 47
OF                   : 35
PLUS                 : 40
POOL                 : 25
RARROW               : 36 37
RBRACE               : 4 5 8 9 26
RPAREN               : 8 9 16 17 18 19 20 21 49
SEMI                 : 2 3 6 27 28 36 37
STRING               : 52
THEN                 : 24
TILDE                : 48
TIMES                : 42
TRUE                 : 53
TYPE                 : 4 4 5 8 9 10 11 14 18 19 30 31 32 33 36 37 38
WHILE                : 25
error                : 

Nonterminals, with rules where they appear

bindings             : 29
bindings_tail        : 30 31 32 33
cases                : 35 36
class                : 2 3
classes              : 1 2
expr                 : 8 9 10 15 16 17 18 19 22 23 24 24 24 25 25 27 28 29 30 32 35 36 37 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48 49
exprs                : 16 18 20 22
exprsemi             : 26 27
feature              : 6
features             : 4 5 6
formal               : 12 13
formals              : 8 12
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classes
    (2) classes -> . class SEMI classes
    (3) classes -> . class SEMI
    (4) class -> . CLASS TYPE INHERITS TYPE LBRACE features RBRACE
    (5) class -> . CLASS TYPE LBRACE features RBRACE

    CLASS           shift and go to state 2

    classes                        shift and go to state 3
    program                        shift and go to state 1
    class                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (4) class -> CLASS . TYPE INHERITS TYPE LBRACE features RBRACE
    (5) class -> CLASS . TYPE LBRACE features RBRACE

    TYPE            shift and go to state 5


state 3

    (1) program -> classes .

    $end            reduce using rule 1 (program -> classes .)


state 4

    (2) classes -> class . SEMI classes
    (3) classes -> class . SEMI

    SEMI            shift and go to state 6


state 5

    (4) class -> CLASS TYPE . INHERITS TYPE LBRACE features RBRACE
    (5) class -> CLASS TYPE . LBRACE features RBRACE

    INHERITS        shift and go to state 7
    LBRACE          shift and go to state 8


state 6

    (2) classes -> class SEMI . classes
    (3) classes -> class SEMI .
    (2) classes -> . class SEMI classes
    (3) classes -> . class SEMI
    (4) class -> . CLASS TYPE INHERITS TYPE LBRACE features RBRACE
    (5) class -> . CLASS TYPE LBRACE features RBRACE

    $end            reduce using rule 3 (classes -> class SEMI .)
    CLASS           shift and go to state 2

    classes                        shift and go to state 9
    class                          shift and go to state 4

state 7

    (4) class -> CLASS TYPE INHERITS . TYPE LBRACE features RBRACE

    TYPE            shift and go to state 10


state 8

    (5) class -> CLASS TYPE LBRACE . features RBRACE
    (6) features -> . feature SEMI features
    (7) features -> .
    (8) feature -> . IDENTIFIER LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
    (10) feature -> . IDENTIFIER COLON TYPE LARROW expr
    (11) feature -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 7 (features -> .)
    IDENTIFIER      shift and go to state 12

    features                       shift and go to state 13
    feature                        shift and go to state 11

state 9

    (2) classes -> class SEMI classes .

    $end            reduce using rule 2 (classes -> class SEMI classes .)


state 10

    (4) class -> CLASS TYPE INHERITS TYPE . LBRACE features RBRACE

    LBRACE          shift and go to state 14


state 11

    (6) features -> feature . SEMI features

    SEMI            shift and go to state 15


state 12

    (8) feature -> IDENTIFIER . LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> IDENTIFIER . LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
    (10) feature -> IDENTIFIER . COLON TYPE LARROW expr
    (11) feature -> IDENTIFIER . COLON TYPE

    LPAREN          shift and go to state 17
    COLON           shift and go to state 16


state 13

    (5) class -> CLASS TYPE LBRACE features . RBRACE

    RBRACE          shift and go to state 18


state 14

    (4) class -> CLASS TYPE INHERITS TYPE LBRACE . features RBRACE
    (6) features -> . feature SEMI features
    (7) features -> .
    (8) feature -> . IDENTIFIER LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
    (10) feature -> . IDENTIFIER COLON TYPE LARROW expr
    (11) feature -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 7 (features -> .)
    IDENTIFIER      shift and go to state 12

    features                       shift and go to state 19
    feature                        shift and go to state 11

state 15

    (6) features -> feature SEMI . features
    (6) features -> . feature SEMI features
    (7) features -> .
    (8) feature -> . IDENTIFIER LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
    (10) feature -> . IDENTIFIER COLON TYPE LARROW expr
    (11) feature -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 7 (features -> .)
    IDENTIFIER      shift and go to state 12

    feature                        shift and go to state 11
    features                       shift and go to state 20

state 16

    (10) feature -> IDENTIFIER COLON . TYPE LARROW expr
    (11) feature -> IDENTIFIER COLON . TYPE

    TYPE            shift and go to state 21


state 17

    (8) feature -> IDENTIFIER LPAREN . formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> IDENTIFIER LPAREN . RPAREN COLON TYPE LBRACE expr RBRACE
    (12) formals -> . formal COMMA formals
    (13) formals -> . formal
    (14) formal -> . IDENTIFIER COLON TYPE

    RPAREN          shift and go to state 22
    IDENTIFIER      shift and go to state 24

    formal                         shift and go to state 23
    formals                        shift and go to state 25

state 18

    (5) class -> CLASS TYPE LBRACE features RBRACE .

    SEMI            reduce using rule 5 (class -> CLASS TYPE LBRACE features RBRACE .)


state 19

    (4) class -> CLASS TYPE INHERITS TYPE LBRACE features . RBRACE

    RBRACE          shift and go to state 26


state 20

    (6) features -> feature SEMI features .

    RBRACE          reduce using rule 6 (features -> feature SEMI features .)


state 21

    (10) feature -> IDENTIFIER COLON TYPE . LARROW expr
    (11) feature -> IDENTIFIER COLON TYPE .

    LARROW          shift and go to state 27
    SEMI            reduce using rule 11 (feature -> IDENTIFIER COLON TYPE .)


state 22

    (9) feature -> IDENTIFIER LPAREN RPAREN . COLON TYPE LBRACE expr RBRACE

    COLON           shift and go to state 28


state 23

    (12) formals -> formal . COMMA formals
    (13) formals -> formal .

    COMMA           shift and go to state 29
    RPAREN          reduce using rule 13 (formals -> formal .)


state 24

    (14) formal -> IDENTIFIER . COLON TYPE

    COLON           shift and go to state 30


state 25

    (8) feature -> IDENTIFIER LPAREN formals . RPAREN COLON TYPE LBRACE expr RBRACE

    RPAREN          shift and go to state 31


state 26

    (4) class -> CLASS TYPE INHERITS TYPE LBRACE features RBRACE .

    SEMI            reduce using rule 4 (class -> CLASS TYPE INHERITS TYPE LBRACE features RBRACE .)


state 27

    (10) feature -> IDENTIFIER COLON TYPE LARROW . expr
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr DOT IDENTIFIER LPAREN exprs RPAREN
    (17) expr -> . expr DOT IDENTIFIER LPAREN RPAREN
    (18) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN exprs RPAREN
    (19) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (20) expr -> . IDENTIFIER LPAREN exprs RPAREN
    (21) expr -> . IDENTIFIER LPAREN RPAREN
    (24) expr -> . IF expr THEN expr ELSE expr FI
    (25) expr -> . WHILE expr LOOP expr POOL
    (26) expr -> . LBRACE exprsemi RBRACE
    (29) expr -> . LET bindings IN expr
    (35) expr -> . CASE expr OF cases ESAC
    (38) expr -> . NEW TYPE
    (39) expr -> . ISVOID expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr EQUALS expr
    (47) expr -> . NOT expr
    (48) expr -> . TILDE expr
    (49) expr -> . LPAREN expr RPAREN
    (50) expr -> . IDENTIFIER
    (51) expr -> . INTEGER
    (52) expr -> . STRING
    (53) expr -> . TRUE
    (54) expr -> . FALSE

    IDENTIFIER      shift and go to state 40
    IF              shift and go to state 43
    WHILE           shift and go to state 32
    LBRACE          shift and go to state 44
    LET             shift and go to state 47
    CASE            shift and go to state 36
    NEW             shift and go to state 33
    ISVOID          shift and go to state 37
    NOT             shift and go to state 41
    TILDE           shift and go to state 38
    LPAREN          shift and go to state 42
    INTEGER         shift and go to state 34
    STRING          shift and go to state 39
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45

    expr                           shift and go to state 46

state 28

    (9) feature -> IDENTIFIER LPAREN RPAREN COLON . TYPE LBRACE expr RBRACE

    TYPE            shift and go to state 48


state 29

    (12) formals -> formal COMMA . formals
    (12) formals -> . formal COMMA formals
    (13) formals -> . formal
    (14) formal -> . IDENTIFIER COLON TYPE

    IDENTIFIER      shift and go to state 24

    formals                        shift and go to state 49
    formal                         shift and go to state 23

state 30

    (14) formal -> IDENTIFIER COLON . TYPE

    TYPE            shift and go to state 50


state 31

    (8) feature -> IDENTIFIER LPAREN formals RPAREN . COLON TYPE LBRACE expr RBRACE

    COLON           shift and go to state 51


state 32

    (25) expr -> WHILE . expr LOOP expr POOL
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr DOT IDENTIFIER LPAREN exprs RPAREN
    (17) expr -> . expr DOT IDENTIFIER LPAREN RPAREN
    (18) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN exprs RPAREN
    (19) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (20) expr -> . IDENTIFIER LPAREN exprs RPAREN
    (21) expr -> . IDENTIFIER LPAREN RPAREN
    (24) expr -> . IF expr THEN expr ELSE expr FI
    (25) expr -> . WHILE expr LOOP expr POOL
    (26) expr -> . LBRACE exprsemi RBRACE
    (29) expr -> . LET bindings IN expr
    (35) expr -> . CASE expr OF cases ESAC
    (38) expr -> . NEW TYPE
    (39) expr -> . ISVOID expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr EQUALS expr
    (47) expr -> . NOT expr
    (48) expr -> . TILDE expr
    (49) expr -> . LPAREN expr RPAREN
    (50) expr -> . IDENTIFIER
    (51) expr -> . INTEGER
    (52) expr -> . STRING
    (53) expr -> . TRUE
    (54) expr -> . FALSE

    IDENTIFIER      shift and go to state 40
    IF              shift and go to state 43
    WHILE           shift and go to state 32
    LBRACE          shift and go to state 44
    LET             shift and go to state 47
    CASE            shift and go to state 36
    NEW             shift and go to state 33
    ISVOID          shift and go to state 37
    NOT             shift and go to state 41
    TILDE           shift and go to state 38
    LPAREN          shift and go to state 42
    INTEGER         shift and go to state 34
    STRING          shift and go to state 39
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45

    expr                           shift and go to state 52

state 33

    (38) expr -> NEW . TYPE

    TYPE            shift and go to state 53


state 34

    (51) expr -> INTEGER .

    DOT             reduce using rule 51 (expr -> INTEGER .)
    AT              reduce using rule 51 (expr -> INTEGER .)
    PLUS            reduce using rule 51 (expr -> INTEGER .)
    MINUS           reduce using rule 51 (expr -> INTEGER .)
    TIMES           reduce using rule 51 (expr -> INTEGER .)
    DIVIDE          reduce using rule 51 (expr -> INTEGER .)
    LT              reduce using rule 51 (expr -> INTEGER .)
    LE              reduce using rule 51 (expr -> INTEGER .)
    EQUALS          reduce using rule 51 (expr -> INTEGER .)
    SEMI            reduce using rule 51 (expr -> INTEGER .)
    LOOP            reduce using rule 51 (expr -> INTEGER .)
    OF              reduce using rule 51 (expr -> INTEGER .)
    RPAREN          reduce using rule 51 (expr -> INTEGER .)
    THEN            reduce using rule 51 (expr -> INTEGER .)
    COMMA           reduce using rule 51 (expr -> INTEGER .)
    RBRACE          reduce using rule 51 (expr -> INTEGER .)
    POOL            reduce using rule 51 (expr -> INTEGER .)
    ELSE            reduce using rule 51 (expr -> INTEGER .)
    FI              reduce using rule 51 (expr -> INTEGER .)
    IN              reduce using rule 51 (expr -> INTEGER .)


state 35

    (53) expr -> TRUE .

    DOT             reduce using rule 53 (expr -> TRUE .)
    AT              reduce using rule 53 (expr -> TRUE .)
    PLUS            reduce using rule 53 (expr -> TRUE .)
    MINUS           reduce using rule 53 (expr -> TRUE .)
    TIMES           reduce using rule 53 (expr -> TRUE .)
    DIVIDE          reduce using rule 53 (expr -> TRUE .)
    LT              reduce using rule 53 (expr -> TRUE .)
    LE              reduce using rule 53 (expr -> TRUE .)
    EQUALS          reduce using rule 53 (expr -> TRUE .)
    SEMI            reduce using rule 53 (expr -> TRUE .)
    LOOP            reduce using rule 53 (expr -> TRUE .)
    OF              reduce using rule 53 (expr -> TRUE .)
    RPAREN          reduce using rule 53 (expr -> TRUE .)
    THEN            reduce using rule 53 (expr -> TRUE .)
    COMMA           reduce using rule 53 (expr -> TRUE .)
    RBRACE          reduce using rule 53 (expr -> TRUE .)
    POOL            reduce using rule 53 (expr -> TRUE .)
    ELSE            reduce using rule 53 (expr -> TRUE .)
    FI              reduce using rule 53 (expr -> TRUE .)
    IN              reduce using rule 53 (expr -> TRUE .)


state 36

    (35) expr -> CASE . expr OF cases ESAC
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr DOT IDENTIFIER LPAREN exprs RPAREN
    (17) expr -> . expr DOT IDENTIFIER LPAREN RPAREN
    (18) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN exprs RPAREN
    (19) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (20) expr -> . IDENTIFIER LPAREN exprs RPAREN
    (21) expr -> . IDENTIFIER LPAREN RPAREN
    (24) expr -> . IF expr THEN expr ELSE expr FI
    (25) expr -> . WHILE expr LOOP expr POOL
    (26) expr -> . LBRACE exprsemi RBRACE
    (29) expr -> . LET bindings IN expr
    (35) expr -> . CASE expr OF cases ESAC
    (38) expr -> . NEW TYPE
    (39) expr -> . ISVOID expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr EQUALS expr
    (47) expr -> . NOT expr
    (48) expr -> . TILDE expr
    (49) expr -> . LPAREN expr RPAREN
    (50) expr -> . IDENTIFIER
    (51) expr -> . INTEGER
    (52) expr -> . STRING
    (53) expr -> . TRUE
    (54) expr -> . FALSE

    IDENTIFIER      shift and go to state 40
    IF              shift and go to state 43
    WHILE           shift and go to state 32
    LBRACE          shift and go to state 44
    LET             shift and go to state 47
    CASE            shift and go to state 36
    NEW             shift and go to state 33
    ISVOID          shift and go to state 37
    NOT             shift and go to state 41
    TILDE           shift and go to state 38
    LPAREN          shift and go to state 42
    INTEGER         shift and go to state 34
    STRING          shift and go to state 39
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45

    expr                           shift and go to state 54

state 37

    (39) expr -> ISVOID . expr
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr DOT IDENTIFIER LPAREN exprs RPAREN
    (17) expr -> . expr DOT IDENTIFIER LPAREN RPAREN
    (18) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN exprs RPAREN
    (19) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (20) expr -> . IDENTIFIER LPAREN exprs RPAREN
    (21) expr -> . IDENTIFIER LPAREN RPAREN
    (24) expr -> . IF expr THEN expr ELSE expr FI
    (25) expr -> . WHILE expr LOOP expr POOL
    (26) expr -> . LBRACE exprsemi RBRACE
    (29) expr -> . LET bindings IN expr
    (35) expr -> . CASE expr OF cases ESAC
    (38) expr -> . NEW TYPE
    (39) expr -> . ISVOID expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr EQUALS expr
    (47) expr -> . NOT expr
    (48) expr -> . TILDE expr
    (49) expr -> . LPAREN expr RPAREN
    (50) expr -> . IDENTIFIER
    (51) expr -> . INTEGER
    (52) expr -> . STRING
    (53) expr -> . TRUE
    (54) expr -> . FALSE

    IDENTIFIER      shift and go to state 40
    IF              shift and go to state 43
    WHILE           shift and go to state 32
    LBRACE          shift and go to state 44
    LET             shift and go to state 47
    CASE            shift and go to state 36
    NEW             shift and go to state 33
    ISVOID          shift and go to state 37
    NOT             shift and go to state 41
    TILDE           shift and go to state 38
    LPAREN          shift and go to state 42
    INTEGER         shift and go to state 34
    STRING          shift and go to state 39
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45

    expr                           shift and go to state 55

state 38

    (48) expr -> TILDE . expr
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr DOT IDENTIFIER LPAREN exprs RPAREN
    (17) expr -> . expr DOT IDENTIFIER LPAREN RPAREN
    (18) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN exprs RPAREN
    (19) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (20) expr -> . IDENTIFIER LPAREN exprs RPAREN
    (21) expr -> . IDENTIFIER LPAREN RPAREN
    (24) expr -> . IF expr THEN expr ELSE expr FI
    (25) expr -> . WHILE expr LOOP expr POOL
    (26) expr -> . LBRACE exprsemi RBRACE
    (29) expr -> . LET bindings IN expr
    (35) expr -> . CASE expr OF cases ESAC
    (38) expr -> . NEW TYPE
    (39) expr -> . ISVOID expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr EQUALS expr
    (47) expr -> . NOT expr
    (48) expr -> . TILDE expr
    (49) expr -> . LPAREN expr RPAREN
    (50) expr -> . IDENTIFIER
    (51) expr -> . INTEGER
    (52) expr -> . STRING
    (53) expr -> . TRUE
    (54) expr -> . FALSE

    IDENTIFIER      shift and go to state 40
    IF              shift and go to state 43
    WHILE           shift and go to state 32
    LBRACE          shift and go to state 44
    LET             shift and go to state 47
    CASE            shift and go to state 36
    NEW             shift and go to state 33
    ISVOID          shift and go to state 37
    NOT             shift and go to state 41
    TILDE           shift and go to state 38
    LPAREN          shift and go to state 42
    INTEGER         shift and go to state 34
    STRING          shift and go to state 39
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45

    expr                           shift and go to state 56

state 39

    (52) expr -> STRING .

    DOT             reduce using rule 52 (expr -> STRING .)
    AT              reduce using rule 52 (expr -> STRING .)
    PLUS            reduce using rule 52 (expr -> STRING .)
    MINUS           reduce using rule 52 (expr -> STRING .)
    TIMES           reduce using rule 52 (expr -> STRING .)
    DIVIDE          reduce using rule 52 (expr -> STRING .)
    LT              reduce using rule 52 (expr -> STRING .)
    LE              reduce using rule 52 (expr -> STRING .)
    EQUALS          reduce using rule 52 (expr -> STRING .)
    SEMI            reduce using rule 52 (expr -> STRING .)
    LOOP            reduce using rule 52 (expr -> STRING .)
    OF              reduce using rule 52 (expr -> STRING .)
    RPAREN          reduce using rule 52 (expr -> STRING .)
    THEN            reduce using rule 52 (expr -> STRING .)
    COMMA           reduce using rule 52 (expr -> STRING .)
    RBRACE          reduce using rule 52 (expr -> STRING .)
    POOL            reduce using rule 52 (expr -> STRING .)
    ELSE            reduce using rule 52 (expr -> STRING .)
    FI              reduce using rule 52 (expr -> STRING .)
    IN              reduce using rule 52 (expr -> STRING .)


state 40

    (15) expr -> IDENTIFIER . LARROW expr
    (20) expr -> IDENTIFIER . LPAREN exprs RPAREN
    (21) expr -> IDENTIFIER . LPAREN RPAREN
    (50) expr -> IDENTIFIER .

    LARROW          shift and go to state 57
    LPAREN          shift and go to state 58
    DOT             reduce using rule 50 (expr -> IDENTIFIER .)
    AT              reduce using rule 50 (expr -> IDENTIFIER .)
    PLUS            reduce using rule 50 (expr -> IDENTIFIER .)
    MINUS           reduce using rule 50 (expr -> IDENTIFIER .)
    TIMES           reduce using rule 50 (expr -> IDENTIFIER .)
    DIVIDE          reduce using rule 50 (expr -> IDENTIFIER .)
    LT              reduce using rule 50 (expr -> IDENTIFIER .)
    LE              reduce using rule 50 (expr -> IDENTIFIER .)
    EQUALS          reduce using rule 50 (expr -> IDENTIFIER .)
    SEMI            reduce using rule 50 (expr -> IDENTIFIER .)
    LOOP            reduce using rule 50 (expr -> IDENTIFIER .)
    OF              reduce using rule 50 (expr -> IDENTIFIER .)
    RPAREN          reduce using rule 50 (expr -> IDENTIFIER .)
    THEN            reduce using rule 50 (expr -> IDENTIFIER .)
    COMMA           reduce using rule 50 (expr -> IDENTIFIER .)
    RBRACE          reduce using rule 50 (expr -> IDENTIFIER .)
    POOL            reduce using rule 50 (expr -> IDENTIFIER .)
    ELSE            reduce using rule 50 (expr -> IDENTIFIER .)
    FI              reduce using rule 50 (expr -> IDENTIFIER .)
    IN              reduce using rule 50 (expr -> IDENTIFIER .)


state 41

    (47) expr -> NOT . expr
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr DOT IDENTIFIER LPAREN exprs RPAREN
    (17) expr -> . expr DOT IDENTIFIER LPAREN RPAREN
    (18) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN exprs RPAREN
    (19) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (20) expr -> . IDENTIFIER LPAREN exprs RPAREN
    (21) expr -> . IDENTIFIER LPAREN RPAREN
    (24) expr -> . IF expr THEN expr ELSE expr FI
    (25) expr -> . WHILE expr LOOP expr POOL
    (26) expr -> . LBRACE exprsemi RBRACE
    (29) expr -> . LET bindings IN expr
    (35) expr -> . CASE expr OF cases ESAC
    (38) expr -> . NEW TYPE
    (39) expr -> . ISVOID expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr EQUALS expr
    (47) expr -> . NOT expr
    (48) expr -> . TILDE expr
    (49) expr -> . LPAREN expr RPAREN
    (50) expr -> . IDENTIFIER
    (51) expr -> . INTEGER
    (52) expr -> . STRING
    (53) expr -> . TRUE
    (54) expr -> . FALSE

    IDENTIFIER      shift and go to state 40
    IF              shift and go to state 43
    WHILE           shift and go to state 32
    LBRACE          shift and go to state 44
    LET             shift and go to state 47
    CASE            shift and go to state 36
    NEW             shift and go to state 33
    ISVOID          shift and go to state 37
    NOT             shift and go to state 41
    TILDE           shift and go to state 38
    LPAREN          shift and go to state 42
    INTEGER         shift and go to state 34
    STRING          shift and go to state 39
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45

    expr                           shift and go to state 59

state 42

    (49) expr -> LPAREN . expr RPAREN
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr DOT IDENTIFIER LPAREN exprs RPAREN
    (17) expr -> . expr DOT IDENTIFIER LPAREN RPAREN
    (18) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN exprs RPAREN
    (19) expr -> . expr AT TYPE DOT IDENTIFIER LPAREN RPAREN
    (20) expr -> . IDENTIFIER LPAREN exprs RPAREN
    (21) expr -> . IDENTIFIER LPAREN RPAREN
    (24) expr -> . IF expr THEN expr ELSE expr FI
    (25) expr -> . WHILE expr LOOP expr POOL
    (26) expr -> . LBRACE exprsemi RBRACE
    (29) expr -> . LET bindings IN expr
    (35) expr -> . CASE expr OF cases ESAC
    (38) expr -> . NEW TYPE
    (39) expr -> . ISVOID expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr LE expr
    (46) expr -> . expr EQUALS expr
    (47) expr -> . NOT expr
    (48) expr -> . TILDE expr
    (49) expr -> . LPAREN expr RPAREN
    (50) expr -> . IDENTIFIER
    (51) expr -> . INTEGER
    (52) expr -> . STRING
    (53) expr -> . TRUE
    (54) expr -> . FALSE

    IDENTIFIER      shift and go to state 40
    IF              shift and go to state 43
    WHILE           shift and go to state 32
    LBRACE          shift and go to state 44
    LET             shift and go to state 47
    CASE            shift and go to state 36
    NEW             shift and go to state 33
    ISVOID          shift and go to state 37
    NOT             shift and go to state 41
    TILDE           shift and go to state 38
    LPAREN          shift and go to state 42
    INTEGER         shift and go to state 34
    STRING          shift and go to state 39
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45

    expr                           shift and go to state 60

state 43
